# BILB2000-Yazilim-Gelistirme-II-Ders-Icerigi

./: .gitignore  README.md
LabExamples/: README.txt
LabExamples/Lab01_STL_Kapsayicilar/: calisma1.cpp  calisma2.cpp  calisma3.cpp  calisma4.cpp
LabExamples/Lab02_Iteratorler_Algoritmalar/: calisma1.cpp  calisma2.cpp  calisma3.cpp  (+1 more)
LabExamples/Lab04_Qt_Frameworkune_Giris/calisma3/: CMakeLists.txt  main.cpp
LabExamples/Lab04_Qt_Frameworkune_Giris/calisma6/: CMakeLists.txt  main.cpp
LabExamples/Lab07_Qt_Ileri_Bilesenler/calisma1/: CMakeLists.txt  main.cpp  resources.qrc
LabExamples/Lab08_OBYS_GUI_Tamamlama/: CMakeLists.txt  README.md
LabExamples/Lab08_OBYS_GUI_Tamamlama/include/: obys_domain.h
LabExamples/Lab08_OBYS_GUI_Tamamlama/resources/: obys.qrc
LabExamples/Lab08_OBYS_GUI_Tamamlama/resources/themes/: light.qss
LabExamples/Lab08_OBYS_GUI_Tamamlama/src/: grafik_paneli.cpp  grafik_paneli.h  json_exporter.cpp  json_exporter.h  main_window.cpp  main_window.h  not_giris_dialog.cpp  not_giris_dialog.h  transkript_uretici.cpp
LabExamples/Lab09_OBYS_Tutorial/asama2_yardimci_siniflar/: CMakeLists.txt
LabExamples/Lab09_OBYS_Tutorial/asama2_yardimci_siniflar/src/: main.cpp  persistence_manager.h
LabExamples/Lab09_OBYS_Tutorial/asama4_ana_pencere/: CMakeLists.txt
LabExamples/Lab09_OBYS_Tutorial/asama4_ana_pencere/src/: main_window.cpp  main_window.h  persistence_manager.cpp
LabExamples/Lab10/calisma5/: CMakeLists.txt  main.cpp
LabExamples/Lab11_Esamanlilik_Desenleri/calisma5/: CMakeLists.txt
LabExamples/Lab11_Esamanlilik_Desenleri/calisma5/include/: AnaPencere.h  Worker.h
LabExamples/Lab11_Esamanlilik_Desenleri/calisma5/src/: AnaPencere.cpp  Worker.cpp  main.cpp
LabExamples/Lab12_Ag_Programlamaya_Giris/: CMakeLists.txt  README.md
LabExamples/Lab12_Ag_Programlamaya_Giris/bonus_json/: CMakeLists.txt  main.cpp
LabExamples/Lab12_Ag_Programlamaya_Giris/calisma1_posix/: CMakeLists.txt  echo_istemci.cpp  echo_sunucu.cpp
LabExamples/Lab12_Ag_Programlamaya_Giris/calisma2_qt_istemci/: CMakeLists.txt
LabExamples/Lab12_Ag_Programlamaya_Giris/calisma2_qt_istemci/include/: Istemci.h
LabExamples/Lab12_Ag_Programlamaya_Giris/calisma2_qt_istemci/src/: Istemci.cpp  main.cpp
LabExamples/Lab12_Ag_Programlamaya_Giris/calisma3_qt_chat/: CMakeLists.txt
LabExamples/Lab12_Ag_Programlamaya_Giris/calisma3_qt_chat/include/: ChatSunucu.h  cerceveleme.h
LabExamples/Lab12_Ag_Programlamaya_Giris/calisma3_qt_chat/src/: ChatSunucu.cpp  cerceveleme.cpp  main.cpp
Projects/ARKIS/: CMakeLists.txt
Projects/ARKIS/include/: depo.h  varliklar.h
Projects/ARKIS/src/: main.cpp
Projects/SPORSIS/: CMakeLists.txt  sporsis
Projects/SPORSIS/include/: depo.h  varliklar.h
Projects/SPORSIS/src/: main.cpp
Projects/YURTSIS/: CMakeLists.txt
Projects/YURTSIS/include/: depo.h  varliklar.h
Projects/YURTSIS/src/: main.cpp
kod_ornekleri/: .clangd
kod_ornekleri/bolum03/unite5/obys_modern/: CMakeLists.txt
kod_ornekleri/bolum03/unite5/obys_modern/include/: depo.h  dosyalama.h
kod_ornekleri/bolum03/unite5/obys_modern/include/hatalar/: obys_hatasi.h
kod_ornekleri/bolum03/unite5/obys_modern/include/servisler/: obys_servis.h
kod_ornekleri/bolum03/unite5/obys_modern/include/varliklar/: ders.h  ders_kaydi.h  not_turleri.h  ogrenci.h
kod_ornekleri/bolum03/unite5/obys_modern/src/: main.cpp  test_main.cpp
kod_ornekleri/bolum03/unite5/obys_modern/src/servisler/: obys_servis.cpp
kod_ornekleri/bolum04/unite1/: 01_merhaba_qt.cpp  02_qt_modulleri.cpp  CMakeLists.txt
kod_ornekleri/bolum04/unite1/03_cmake_proje_yapisi/: CMakeLists.txt  main.cpp
kod_ornekleri/bolum04/unite4/: 01_buton_etiket.cpp  02_giris_widgetlari.cpp  03_obys_kayit_formu.cpp  CMakeLists.txt
kod_ornekleri/bolum05/unite4/: 01_designer_ornek.cpp  01_designer_ornek.ui  02_obys_ana_pencere.cpp  02_obys_ana_pencere.h  CMakeLists.txt
kod_ornekleri/bolum06/screenshots/ss05_obys_splitter/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  ogrencimodel.cpp
kod_ornekleri/bolum06/screenshots/ss08_obys_arama/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  ogrenciproxymodel.cpp  ogrenciproxymodel.h
kod_ornekleri/bolum08/unite1/04_obys_v1_binary_kayit/: CMakeLists.txt  README.md
kod_ornekleri/bolum08/unite1/04_obys_v1_binary_kayit/src/: main.cpp  main_window.cpp  main_window.h
kod_ornekleri/bolum08/unite2/04_obys_v2_raporlama/: CMakeLists.txt  README.md
kod_ornekleri/bolum08/unite2/04_obys_v2_raporlama/src/: main.cpp  main_window.cpp  main_window.h  not_giris_dialog.cpp  transkript_uretici.h
kod_ornekleri/bolum08/unite3/04_obys_v3_grafik/: CMakeLists.txt  README.md
kod_ornekleri/bolum08/unite3/04_obys_v3_grafik/include/: obys_domain.h
kod_ornekleri/bolum08/unite3/04_obys_v3_grafik/src/: ders_raporu.h  main.cpp  main_window.cpp  main_window.h  notlar_model.h
kod_ornekleri/bolum08/unite5/02_obys_v5_release/: CMakeLists.txt  CMakePresets.json  README.md
kod_ornekleri/bolum08/unite5/02_obys_v5_release/docs/: user-guide.md
kod_ornekleri/bolum08/unite5/02_obys_v5_release/include/: obys_servis.h
kod_ornekleri/bolum08/unite5/02_obys_v5_release/resources/: obys.qrc
kod_ornekleri/bolum08/unite5/02_obys_v5_release/resources/themes/: dark.qss
kod_ornekleri/bolum08/unite5/02_obys_v5_release/src/: grafik_paneli.cpp  istatistik_model.cpp  main.cpp  main_window.cpp  notlar_model.cpp  persistence_manager.h  version.h.in
kod_ornekleri/bolum08/unite5/02_obys_v5_release/translations/: obys_tr.ts
kod_ornekleri/bolum10/unite4/02_worker_pattern/: CMakeLists.txt  ana_pencere.h  hesaplama_controller.h  hesaplama_worker.h  main.cpp
kod_ornekleri/bolum10/unite4/04_obys_responsive/: CMakeLists.txt  main.cpp  rapor_penceresi.h
kod_ornekleri/bolum11/unite4/01_obys_responsive/: CMakeLists.txt  README.md
kod_ornekleri/bolum11/unite4/01_obys_responsive/include/: AnaPencere.h  Depo.h  DisaAktarmaServisi.h  HesaplamaServisi.h  IceAktarmaServisi.h  Ogrenci.h
kod_ornekleri/bolum11/unite4/01_obys_responsive/src/: AnaPencere.cpp  DisaAktarmaServisi.cpp  HesaplamaServisi.cpp  IceAktarmaServisi.cpp  main.cpp
(+317 files in other folders)
